# watsonx-challenge-2026-fuzzy-matcher

./: .gitignore  Launch FuzzyMatcher.bat  Launch FuzzyMatcher.command  README.md  fuzzy_matcher.spec  main.py  pyproject.toml  release.sh
.github/workflows/: build.yml  tests.yml
core/: excel_reader.py  exporter.py  matcher.py  normalizer.py  scorer.py
models/: match_result.py
tests/: test_excel_reader.py  test_exporter.py  test_matcher.py  test_normalizer.py  test_scorer.py
ui/: main_window.py  step1_input.py  step2_matching.py  step3_output.py  styles.py
workers/: match_worker.py
