[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fuzzy-matcher"
version = "1.0.0"
description = "Cross-platform desktop tool for fuzzy matching account/company names between two Excel files."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "PyInstaller>=6.6",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
